--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
+    <!-- favicons -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png" />
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png" />
     <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png" />
@@ -46,7 +47,52 @@
     <meta name="msapplication-TileColor" content="#ffffff" />
     <meta name="msapplication-TileImage" content="/ms-icon-144x144.png" />
     <meta name="theme-color" content="#ffffff" />
+    <!-- end favicons -->
+
+    <!-- heymeta SEO -->
     <title>Bitcoin Faces</title>
+    <meta
+      name="description"
+      content="Every name has a bitcoin face. Get yours first."
+    />
+
+    <!-- Google / Search Engine Tags -->
+    <meta itemprop="name" content="Bitcoin Faces" />
+    <meta
+      itemprop="description"
+      content="Every name has a bitcoin face. Get yours first."
+    />
+    <meta
+      itemprop="image"
+      content="https://bitcoinfaces.xyz/api/get-image?name=bitcoinfaces.xyz"
+    />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://bitcoinfaces.xyz" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Bitcoin Faces" />
+    <meta
+      property="og:description"
+      content="Every name has a bitcoin face. Get yours first."
+    />
+    <meta
+      property="og:image"
+      content="https://bitcoinfaces.xyz/api/get-image?name=bitcoinfaces.xyz"
+    />
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Bitcoin Faces" />
+    <meta
+      name="twitter:description"
+      content="Every name has a bitcoin face. Get yours first."
+    />
+    <meta
+      name="twitter:image"
+      content="https://bitcoinfaces.xyz/api/get-image?name=bitcoinfaces.xyz"
+    />
+
+    <!-- Meta Tags Generated via http://heymeta.com -->
   </head>
   <body>
     <noscript>You need to enable JavaScript to use this app.</noscript>
