hotfix: update seo image link

--- a/public/index.html
+++ b/public/index.html
@@ -64,7 +64,7 @@
     />
     <meta
       itemprop="image"
-      content="https://bitcoinfaces.xyz/api/get-image?name=bitcoinfaces.xyz"
+      content="https://bitcoinfaces.xyz/bitcoin-face-174-logo-circle-500.png"
     />
 
     <!-- Facebook Meta Tags -->
@@ -77,7 +77,7 @@
     />
     <meta
       property="og:image"
-      content="https://bitcoinfaces.xyz/api/get-image?name=bitcoinfaces.xyz"
+      content="https://bitcoinfaces.xyz/bitcoin-face-174-logo-circle-500.png"
     />
 
     <!-- Twitter Meta Tags -->
@@ -89,7 +89,7 @@
     />
     <meta
       name="twitter:image"
-      content="https://bitcoinfaces.xyz/api/get-image?name=bitcoinfaces.xyz"
+      content="https://bitcoinfaces.xyz/bitcoin-face-174-logo-circle-500.png"
     />
 
     <!-- Meta Tags Generated via http://heymeta.com -->
